Console staffchat, ROTATE instruction, and DND placeholder
Also auto creates the tutorial folder if it doesn't exist